Fixed footer link spacings and added missing Link tags

--- a/components/footer/Footer.module.sass
+++ b/components/footer/Footer.module.sass
@@ -30,7 +30,7 @@
     h3
       margin-bottom: 1rem
     li
-      margin-top: 1.5rem
+      padding-top: 1rem
 
 //default layout and other styles
 
